roles/openshift/ai-3/files/llm-hosting-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    maas.opendatahub.io/gateway-access: "true"
  name: llm-hosting
